--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 body{
-    color: red;
+    margin: 0cm;
 }
+.cover {
+    height: 400px;
+    background-image: url(https://cdn.glitch.global/4cd10c94-fc22-4246-8ce7-7089a8df5667/rsz_nikolai-chernichenko-4dlzzxyc8_k-unsplash.jpg?v=1679416992277);
+  }
