--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,7 @@ aside{
     margin-bottom: 50px; /*Cambiar por alto del footer*/
     background-color: lightblue;
 }
+aside p{
+    margin-left: 20px;
+    margin-right: 10px;
+}
