--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
   font-weight: 400;
   font-style: normal;
 }
+:root{
+    --color1: #e7e79d; /*Amarillo*/
+    --color2: #c0d890; /*Verde*/
+    --color3: #78a890; /*Azul*/
+    --color4: #606078; /*Morado*/
+    --color5: #d8a878; /*Color humilde*/
+}
 #pseudo-header{
     display: block;
     height: 50px;
