--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,14 @@ main section{
 }
 /*Parrafos*/
 .photo_container p{
+    margin: 0px 10px;
+
     font-weight: bold;
-    margin: 0px 0px;
 }
-.photo_container p:nth-child(3), .photo_container p:nth-child(4){
-    display: inline-block;
-    width: 27%;
+.photo_container p span{
+    font-weight: 400;
 }
+
 .photo_container p:nth-child(4){
     display: inline-block;
     font-weight: 400;
