--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header{
 main{
     flex: 1;
     vertical-align: top;
-    margin: 60px 0px;
+    margin: 55px 0px;
     display: inline-block;
     width: 82%;
 }
@@ -55,35 +55,37 @@ main section{
 
 /*CONTENEDORES:*/
 .photo_container{
-    background-color: var(--color1);
+    background-color: var(--color2);
     border-radius: 0px ;                        /*Provisional*/
     display: inline-block;
     margin: 10px 10px;
+    padding-bottom: 5px;
     transition: all 0.5s;
-
-    box-shadow: 0px 0px 27px 7px rgba(0,0,0,0.62);
+    box-shadow: 0px 0px 27px 7px rgba(0,0,0,0.40);
 }
 /*Animación*/
 .photo_container:hover{
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 /*Parrafos*/
 .photo_container p{
-    margin: 2px 20px;
-
+    margin: 0px 100px 0px 20px;
     font-weight: bold;
+}
+.photo_container p:first-of-type{
+    font-size: 24px;
 }
 .photo_container p span{
     font-weight: 400;
 }
 /*Imágenes*/
 .photo_container img{
-    width: 200px;
+    width: 300px;
 }
 
 /*ASIDE DE COMENTARIOS:*/
 aside{
-    flex: 0.2;
+    flex: 0.3;
     margin-top: 50px;                   /*Cambiar por alto del header*/
     margin-bottom: 50px;                /*Cambiar por alto del footer*/
     background-color: lightblue;
