--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     --color4: #606078; /*Morado*/
     --color5: #d8a878; /*Color humilde*/
     --color6: #56566E; /*Morado oscuro*/
+    --color7: #add8e6; /*Azul claro*/
 }
 
 /*Para sacar datos para el header*/
@@ -122,7 +123,7 @@ aside{
     flex: 0.3;
     margin-top: 50px;                   /*Cambiar por alto del header*/
     margin-bottom: 50px;                /*Cambiar por alto del footer*/
-    background-color: lightblue;
+    background-color: var(--color7);
     font-size: 20px;
 }
 aside p{
